Bug 137786 - Crash swlo!SwNodeIndex::~SwNodeIndex+0x18
Summary: Crash swlo!SwNodeIndex::~SwNodeIndex+0x18
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.1.0 target:7.0.4
Keywords: bibisected, regression
Depends on:
Blocks: Crash
  Show dependency treegraph
 
Reported: 2020-10-27 07:23 UTC by Telesto
Modified: 2020-11-16 10:59 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
BT without symbols (3.50 KB, text/plain)
2020-10-27 07:24 UTC, Telesto
Details
gdbtrace without symbols (19.69 KB, text/x-log)
2020-11-05 15:41 UTC, Kevin Suo
Details
gdbtrace with symbols (57.25 KB, text/x-log)
2020-11-05 15:41 UTC, Kevin Suo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-10-27 07:23:55 UTC
Description:
Crash swlo!SwNodeIndex::~SwNodeIndex+0x18

Steps to Reproduce:
1. Open attachment 166748 [details] bug 137781
2. Select frame 2 on page 2
3. CTRL+X
4. CTRL+Z
5. CTRL+X -> Shape still visible but wrong page see bug 137781
6. File -> Reload
7. Select frame 2 on page 2
8. CTRL+X -> Crash

Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 94e6e140491de31c0788c91af855a75a3bb12709
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-10-27 07:24:23 UTC
Created attachment 166753 [details]
BT without symbols
Comment 2 Telesto 2020-10-27 07:25:33 UTC
Still fine in
Version: 6.2.0.0.alpha0+
Build ID: 9d754a59154c40235c240bb0e7f47a2006fa85bd
CPU threads: 4; OS: Windows 6.3; UI render: GL; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 3 Kevin Suo 2020-11-05 15:39:19 UTC
P.S. the term "frame 2 on page 2" means the outer-frame of "figure 2", not the inner frame.

There seems to be 2 different crashes:

1. With a master build as of the following commit, without symbols:
2020-11-05 08:01:12 +0100 2e32f4ed5af16a68c97a50806a42ffa2d10f1d7a

The crash happens when I follow the steps mentioned by the bug reporter. See the full gdb backtrace without symbols. The output seems the same as the one provided by the bug reporter.

2. With a master build as of the following commit, with symbols:
2020-11-04 0b8c7a94c6c4b1aa10c7ae0a614d0f1f6cba1002

The crash happens the first place when I try to select the "frame 2 on page 2". See the full gdb backtrace with symbols. It seems to be related to gtk3 code. As a result, I am adding Caolán McNamara in cc: would you please take a look?


(That being said, I am not able to get a BT with symbols for the 1st crash.)
Comment 4 Kevin Suo 2020-11-05 15:41:03 UTC
Created attachment 167039 [details]
gdbtrace without symbols
Comment 5 Kevin Suo 2020-11-05 15:41:56 UTC
Created attachment 167040 [details]
gdbtrace with symbols
Comment 6 Kevin Suo 2020-11-07 03:35:55 UTC
Bibisected using my own bibisect repo.

First bad commit:

    2020-09-08 09:11:24 +0200 da4f9b77a6cd39b1ae5babdd476d1575c8b9371c
    tdf#135149 sw: fix deleting textbox of as-char shapes

Possible range: 5989ffe70942af036974b70c9e0ecd67978c6cc6..da4f9b77a6cd39b1ae5babdd476d1575c8b9371c

where da4f9b77a6cd39b1ae5babdd476d1575c8b9371c is the most suspicious bad one.

Adding Miklos Vajna in cc list: Would you please also take a look?
Comment 7 Caolán McNamara 2020-11-09 10:32:57 UTC
I'll take this for the gtk-specific crash which is from trying to "toggle" on a GtkToolButton which isn't a GtkToggleToolButton. The problem with these specific align commands is that there is inconsistency between the different applications in that sometimes these are considered toggles and sometimes they are not, which is a bit messy
Comment 8 Commit Notification 2020-11-09 14:38:05 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e1e662065c911e55aeb85a67664dea9d5ed12313

Resolves: tdf#137786 allow 'toggling' GtkToolButtons

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Kevin Suo 2020-11-09 14:52:37 UTC
Caolán: I suspect your commit only fixes the 2nd crash, but not the 1st one? If so, should we keep this bug open?
Comment 10 Caolán McNamara 2020-11-09 15:24:38 UTC
I think we need a separate bug for the other problem
Comment 11 Commit Notification 2020-11-16 08:49:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/fbee4f38664eada791789b36514932aa66e65571

Resolves: tdf#137786 allow 'toggling' GtkToolButtons

It will be available in 7.0.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Telesto 2020-11-16 10:59:58 UTC
Would have preferred new report for GTK3 issue instead of hijacking this bug. Anyhow, created a new report bug 137781 for they original issue