Resolves: tdf#137786 allow 'toggling' GtkToolButtons

even if they are not GtkToggleToolButtons

We already allow this for GtkMenuToolButton, we shouldn't need to allow
it for a GtkToolButton because a GtkToggleToolButton should be used. But
we have inconsistency where some of these 'align' features are
considered toggleable by some apps or modes within an app and not by
others.

So when this inconsistency arises reuse the pseudo-toggle support
for GtkMenuToolButton for GtkToolButton.

Change-Id: I78b625b206bf6187e36fc39f876d4828ada10a7d